oxiplate-derive/tests/broken/strings/string-continuation-span.stderr
error: Expected an expression.
 --> tests/broken/strings/string-continuation-span.rs:5:6
  |
5 |     {{")]
  |      ^
